--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.4",
     "express": "^5.2.1",
     "mongoose": "^8.20.3",
     "multer": "^2.0.2",
